[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-gemma-demo"
version = "0.1.0"
description = "CLI inference app for google/diffusiongemma-26B-A4B-it using Hugging Face Transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30.0",
    "torch>=2.3.0",
    "transformers>=5.11.0",
]

[project.scripts]
diffusion-gemma = "diffusion_gemma_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
