[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-gemma-demo"
version = "0.1.0"
description = "CLI inference app for the quantized Unsloth DiffusionGemma GGUF."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub[cli]>=0.33.0",
]

[project.scripts]
diffusion-gemma = "diffusion_gemma_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
